--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@youpenglai/mfw",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "consul api info",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/proto-loader": "^0.4.0",
+    "amqplib": "^0.5.3",
     "bluebird": "^3.5.3",
     "grpc": "^1.19.0",
     "request": "^2.88.0"
