--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@youpenglai/mfw",
-  "version": "1.0.8",
+  "version": "1.1.2",
   "description": "consul api info",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "amqplib": "^0.5.3",
     "bluebird": "^3.5.3",
     "grpc": "^1.19.0",
+    "lodash": "^4.17.11",
     "request": "^2.88.0"
   }
 }
